--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,8 +1,7 @@
-name: Docker Image Skopeo Copy
+name: Skopeo Copy Docker Images
 
 on:
-  push:
-    branches: [ "main" ]
+  workflow_dispatch:
   pull_request:
     branches: [ "main" ]
 
@@ -22,7 +21,11 @@ jobs:
         KUBERNETES_VERSION: v1.28.15
         KUBESPHERE_VERSION: v4.1.2
         IMAGES_LIST_FILE: images-list-mirrors-kubernetes-v1.28.15-kubesphere-v4.1.2.txt
-        REGISTRY: ghcr.io
-        REPOSITORY: athlonreg
-        GITHUB_TOKEN: ${{ secrets.GHCR_TOKEN }}
+        GHCR_REGISTRY: ghcr.io
+        QUAY_REGISTRY: quay.io
+        GHCR_REPOSITORY: athlonreg
+        QUAY_REPOSITORY: taolu
+        REPO: QUAY # or GHCR will be copied to GITHUB Container Registry
+        GHCR_TOKEN: ${{ secrets.GHCR_TOKEN }}
+        QUAY_TOKEN: ${{ secrets.QUAY_TOKEN }}
         HUAWEI_TOKEN: ${{ secrets.HUAWEI_TOKEN }}
